--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "axios": "^0.21.0",
     "bootstrap-vue": "^2.17.3",
+    "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.1",
     "vue-router": "^3.4.8"
   },
   "devDependencies": {
